feat(bsp): update Ping example
Update Ping example to send and receive a FlatBuffer message.